--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "connect-ensure-login": "^0.1.1",
     "connect-flash": "^0.1.1",
     "cookie-parser": "^1.4.6",
+    "cross-env": "^7.0.3",
     "csurf": "^1.11.0",
+    "d": "^1.0.1",
     "ejs": "^3.1.8",
     "express": "^4.18.1",
     "express-session": "^1.17.3",
